apps/flame/deploy.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: flame
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flame
  template:
    metadata:
      labels:
        app: flame
    spec:
      serviceAccountName: flame
      securityContext:
        fsGroup: 1000
      containers:
        - name: flame
          image: pawelmalak/flame
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: http
              containerPort: 5005
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
          - mountPath: "/app/data"
            name: flame-data
      volumes:
        - name: flame-data
          persistentVolumeClaim:
            claimName: flame-data
          # hostPath:
          #   path: /home/clayton/flame
          # nfs:
          #   server: 192.168.1.56
          #   path: /mnt/ssd/vols/flame/
