apps/flame/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: flame
spec:
  selector:
    app: flame
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5005
